--- a/assets/css/_bx-slider.scss
+++ b/assets/css/_bx-slider.scss
@@ -40,7 +40,7 @@
 
 .bx-wrapper .bx-loading {
 	min-height: 50px;
-	background: url(../img/bx_loader.gif) center center no-repeat #fff;
+	background: url(img/bx_loader.gif) center center no-repeat #fff;
 	height: 100%;
 	width: 100%;
 	position: absolute;
@@ -91,15 +91,15 @@
 /* DIRECTION CONTROLS (NEXT / PREV) */
 
 .bx-wrapper .bx-prev {
-	left: -8rem;
-	background: url(../img/controls-alt.png) no-repeat 0 0;
+	left: 1rem;
+	background: url(img/controls-alt.png) no-repeat 0 0;
 	background-size: 200%;
-	
+
 }
 
 .bx-wrapper .bx-next {
-	right: -8rem;
-	background: url(../img/controls-alt.png) no-repeat -47px 0;
+	right: 1rem;
+	background: url(img/controls-alt.png) no-repeat -47px 0;
 	background-size: 200%;
 }
 
@@ -126,7 +126,7 @@
 	width: 10px;
 	height: 11px;
 	outline: 0;
-	background: url(../img/controls.png) -86px -11px no-repeat;
+	background: url(img/controls.png) -86px -11px no-repeat;
 	margin: 0 3px;
 }
 
@@ -141,7 +141,7 @@
 	width: 9px;
 	height: 11px;
 	outline: 0;
-	background: url(../img/controls.png) -86px -44px no-repeat;
+	background: url(img/controls.png) -86px -44px no-repeat;
 	margin: 0 3px;
 }
 
@@ -168,7 +168,7 @@
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	background: #666\9;
+	background: #666;
 	background: rgba(80, 80, 80, 0.75);
 	width: 100%;
 }
@@ -205,7 +205,7 @@
 }
 
 .bx-slider li#one {
-	background: #fff url(../img/slider/slider1.jpg) no-repeat center 0;
+	background: #fff url(img/slider/slider1.jpg) no-repeat center 0;
 	-webkit-background-size: 	cover;
 	-moz-background-size: 		cover;
 	-o-background-size: 		cover;
@@ -215,7 +215,7 @@
 }
 
 .bx-slider li#two {
-	background: #fff url(../img/slider/slider2.jpg) no-repeat center 0;
+	background: #fff url(img/slider/slider2.jpg) no-repeat center 0;
 	-webkit-background-size: 	cover;
 	-moz-background-size: 		cover;
 	-o-background-size: 		cover;
@@ -226,7 +226,7 @@
 }
 
 .bx-slider li#three {
-	background: #fff url(../img/slider/slider3.jpg) no-repeat center 0;
+	background: #fff url(img/slider/slider3.jpg) no-repeat center 0;
 	-webkit-background-size: 	cover;
 	-moz-background-size: 		cover;
 	-o-background-size: 		cover;
@@ -237,7 +237,7 @@
 }
 
 .bx-slider li#four {
-	background: #fff url(../img/slider/slider4.jpg) no-repeat center 0;
+	background: #fff url(img/slider/slider4.jpg) no-repeat center 0;
 	-webkit-background-size: 	cover;
 	-moz-background-size: 		cover;
 	-o-background-size: 		cover;
@@ -286,7 +286,7 @@
 	text-indent: -9999px;
 	z-index: 999;
 	opacity: 1;
-	
+
 	-webkit-transition: 	opacity 0.3s ease-in-out;
 	-moz-transition: 		opacity 0.3s ease-in-out;
 	-ms-transition: 		opacity 0.3s ease-in-out;
@@ -299,7 +299,7 @@
 	.bx-wrapper .bx-prev {
 		left: -5rem;
 	}
-	
+
 	.bx-wrapper .bx-next {
 		right: -5rem;
 	}
@@ -309,19 +309,19 @@
 	.bx-wrapper .bx-prev {
 		left: 0rem;
 	}
-	
+
 	.bx-wrapper .bx-next {
 		right: 0rem;
 		left: 4rem;
 	}
-	
+
 	.bx-wrapper .bx-controls-direction a {
 		top: 95%;
 	}
 }
 
 @media only screen and (max-width : 1199px) {
-	
+
 	.bx-wrapper .bx-controls-direction a {
 		top: 100%;
 	}
@@ -335,14 +335,13 @@
 		height: 47px;
 		margin: 1rem auto 2rem auto;
 	}
-	
+
 	.bx-wrapper .bx-prev {
 		left: 0rem;
 	}
-	
+
 	.bx-wrapper .bx-next {
 		right: 0rem;
 		left: initial;
 	}
 }
-
