--- a/assets/css/_sections.scss
+++ b/assets/css/_sections.scss
@@ -1,87 +1,143 @@
-@mixin anchor-main {
-  text-transform: uppercase;
-
-  color: $theme-main-color;
-
-  font-size: 16px;
+@mixin align-center
+{
+    -webkit-box-align: center !important;
+    -webkit-align-items: center !important;
+            align-items: center !important;
+    -ms-flex-align: center !important;
 }
 
+@mixin anchor-main
+{
+    font-size: 16px;
 
-//Slider Contact Box
-.contact-box {
-  position: absolute;
-  z-index: 1000;
-  bottom: 0;
+    text-transform: uppercase;
 
-  width: 100%;
+    color: $theme-main-color;
+}
 
-  background: rgba($white, 0.3);
-  .added-bg {
-    background: rgba($white, 0.6);
-  }
-  & .social-icons {
+@mixin d-flex
+{
+    display: -webkit-box !important;
+    display: -webkit-flex !important;
+    display: -ms-flexbox !important;
+    display:         flex !important;
+}
+
+// Slider Contact Box
+
+.contact-box
+{
+    position: absolute;
+    z-index: 1000;
+    bottom: 0;
+
     width: 100%;
-    padding: 0.75rem 0;
 
-    text-align: center;
+    background: rgba($white, .3);
 
-    border-right: 1px solid $theme-main-color;
-    border-left: 1px solid $theme-main-color;
-    & li {
-    padding-right: 0.35rem;
-      &:nth-child(4n+1) a {
-        background: $theme-main-color;
-      }
-      &:nth-child(4n+2) a {
-        background: $theme-secondary-color;
-      }
-      &:nth-child(4n+3) a {
-        background: $theme-accent-color;
-      }
-      &:last-child {
-        padding: 0;
-      }
-      a {
-        margin: 0;
-        padding: 8px;
+    .added-bg
+    {
+        background: rgba($white, .6);
+    }
 
-        background: #1D2A4C;
+    & .social-icons
+    {
+        width: 100%;
+        padding: .75rem 0;
 
-        font-size: 12px;
+        text-align: center;
 
-        &:hover {
-          opacity: 0.5;
+        border-right: 1px solid $theme-main-color;
+        border-left: 1px solid $theme-main-color;
+
+        & li
+        {
+            padding-right: .35rem;
+
+            &:nth-child(4n+1) a
+            {
+                background: $theme-main-color;
+            }
+
+            &:nth-child(4n+2) a
+            {
+                background: $theme-secondary-color;
+            }
+
+            &:nth-child(4n+3) a
+            {
+                background: $theme-accent-color;
+            }
+
+            &:last-child
+            {
+                padding: 0;
+            }
+
+            a
+            {
+                font-size: 12px;
+
+                margin: 0;
+                padding: 8px;
+
+                background: #1d2a4c;
+
+                &:hover
+                {
+                    opacity: .5;
+                }
+            }
         }
-      }
+        @media screen
+        and (max-width : 767px)
+        {
+            border: 0;
+        }
     }
-  }
-  .spec {
-    a {
-      @include anchor-main;
-      &:hover {
-        opacity: 0.7;
-      }
+
+    .spec
+    {
+        a
+        {
+            @include   anchor-main;
+
+            &:hover
+            {
+                opacity: .7;
+            }
+        }
     }
-  }
 }
 
-/*** SECTIONS ***/
-/*** Home Section ***/
-section.home-content {
+/* SECTIONS ** */
+
+/* Home Section ** */
+
+section.home-content
+{
     position: relative;
 
-    padding: 2rem 0;
+    padding: 3rem 0;
 
-    background: #fff;
-    background-size: cover;
+    background: $white url(img/logo-watermark.png) no-repeat 20% center;
 }
 
-section.home-content .container, section.home-content .container-fluid {
+section.home-content .container,
+section.home-content .container-fluid
+{
     position: relative;
     z-index: 3;
 }
 
-section.home-content #primary h1, .featured-title {
+.featured-title,
+section.home-content #primary h1
+{
+    font-family: $font-main;
+    font-size: 60px;
+    font-weight: 300;
+    line-height: 1.25;
+
     position: relative;
 
     display: block;
@@ -93,70 +149,239 @@ section.home-content #primary h1, .featured-title {
     letter-spacing: 0;
     text-transform: uppercase;
 
-    color: #7d8589;
-
-    font-family: $main-font;
-    font-size: 60px;
-    font-weight: 300;
-    line-height: 1.25;
+    color: $theme-main-color;
 }
 
-section.home-content #primary h1 span, .featured-title span {
-    display: block;
+.featured-title span,
+section.home-content #primary h1 span
+{
+    font-family: $font-tertiary;
+    font-size: 32px;
+    font-style: italic;
 
-    margin-top: 1rem;
-    padding-top: 1rem;
+    display: block;
 
     text-transform: none;
-    text-transform: uppercase;
 
-    border-top: 1px solid $theme-accent-color;
-
-    font-size: 30px;
+    color: $theme-secondary-color;
 }
 
-section.home-content #primary h2 span {
+section.home-content #primary h2 span
+{
     display: block;
 }
 
-section.home-content #primary p, .home section p {
-    color: #7d8589;
-
+.home section p,
+section.home-content #primary p
+{
     line-height: 1.6;
+
+    color: $dark-grey;
 }
 
-/* Meet Doc */
-section.meet {
-    padding: 2rem 0;
-}
+/* ----------SERVICES ---------- */
 
-/*** Call to Actions ***/
-section.call-to-actions {
-    padding: 3rem 0;
-}
+section.services
+{
+    position: relative;
 
-@media only screen and (min-width: 1366px) {
-    section.call-to-actions .container {
-        width: 1560px;
-        max-width: 100%;
+    padding: 12rem 0;
+
+    background: url(img/bg-services.jpg) no-repeat center center;
+    background-size: cover;
+
+    &::after
+    {
+        position: absolute;
+        z-index: 3;
+        bottom: 0;
+
+        width: 100%;
+        height: 50px;
+
+        content: '';
+
+        background: rgba($white, .3);
+    }
+
+    & [class*='col']
+    {
+        margin: 15px 0;
+        & .box
+        {
+            position: relative;
+
+            height: 100%;
+            padding-bottom: 100%;
+
+            & .hover-arrow
+            {
+                background: rgba($white, 0.6);
+                opacity: 0;
+                position: absolute;
+                padding:0.25rem;
+                z-index: 3;
+                transition: opacity 0.3s ease;
+                bottom: 5px;
+                right: 0;
+                i {
+
+                }
+                @media screen and (max-width: 991px) {
+                  font-size: 11px;
+                }
+            }
+
+            &::after {
+              content: '';
+              opacity: 0;
+              background: rgba($white, 0.6);
+              display: block;
+              height: 5px;
+              position: absolute;
+              bottom: 0;
+              z-index: 3;
+              width: 100%;
+              transition: opacity 0.3s ease;
+            }
+
+            &:hover::after {
+              content: '';
+              opacity: 1;
+            }
+
+            &:hover .hover-arrow {
+              opacity: 1;
+            }
+
+            & a
+            {
+                position: absolute;
+
+                width: 100%;
+                height: 100%;
+                margin: 0;
+
+                @include   align-center;
+                @include   d-flex;
+            }
+
+            & h4
+            {
+                font-family: $font-main;
+                font-size: 28px;
+                font-weight: 300;
+
+                width: 100%;
+                margin: 0;
+
+                text-align: center;
+                text-transform: none;
+
+                color: $white;
+
+                @media screen and (max-width: $md) {
+                  font-size: 18px;
+                }
+            }
+        }
+
+        &:nth-child(1) .box
+        {
+            background-color: $theme-main-color;
+        }
+
+        &:nth-child(2) .box
+        {
+            background-color: darken($theme-secondary-color, 10%);
+        }
+
+        &:nth-child(3) .box
+        {
+            background-color: $theme-secondary-color;
+        }
+
+        &:nth-child(4) .box
+        {
+            background-color: $theme-accent-color;
+        }
     }
 }
 
-section.call-to-actions .cta a {
+/* Meet Doc */
+
+section.meet
+{
+    background: $white url(img/logo-watermark.png) no-repeat center center;
+    padding: 4rem 0;
+
+    & [class="col-sm-6"] {
+      @media screen and (max-width: $xs) {
+        margin-bottom: 3rem;
+      }
+    }
+
+    & h4 {
+      font-size: 24px;
+      text-transform: uppercase;
+      color: $theme-main-color;
+      letter-spacing: 1px;
+      font-weight: 300;
+      & span {
+        font-family: $font-tertiary;
+        color: $theme-secondary-color;
+        font-size: 20px;
+        display: block;
+        text-transform: none;
+        margin-top: 1rem;
+      }
+
+      &::after {
+        content: '';
+        display: block;
+        height: 1px;
+        width: 25%;
+        background-color: $theme-accent-color;
+        position: relative;
+        margin: 1rem 0;
+
+        @media screen and (max-width: $md) {
+          margin: 1rem auto;
+        }
+      }
+    }
+
+}
+
+/* Call to Actions ** */
+
+section.call-to-actions
+{
+    padding: 3rem 0;
+}
+
+section.call-to-actions .cta a
+{
     top: 0;
 
-    -webkit-box-shadow: 0px 0px 0px 0px rgba(90, 91, 95, 0);
-    -moz-box-shadow: 0px 0px 0px 0px rgba(90, 91, 95, 0);
-    box-shadow: 0px 0px 0px 0px rgba(90, 91, 95, 0);
+    -webkit-box-shadow: 0 0 0 0 rgba(90, 91, 95, 0);
+       -moz-box-shadow: 0 0 0 0 rgba(90, 91, 95, 0);
+            box-shadow: 0 0 0 0 rgba(90, 91, 95, 0);
 }
 
-section.call-to-actions .cta, section.call-to-actions .cta a, section.call-to-actions .cta a h4, section.call-to-actions .cta a img {
-    -webkit-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
+section.call-to-actions .cta,
+section.call-to-actions .cta a,
+section.call-to-actions .cta a h4,
+section.call-to-actions .cta a img
+{
+    -webkit-transition: all .3s ease-in-out;
+         -o-transition: all .3s ease-in-out;
+            transition: all .3s ease-in-out;
 }
 
-section.call-to-actions .cta a, section.call-to-actions .cta a .box {
+section.call-to-actions .cta a,
+section.call-to-actions .cta a .box
+{
     position: relative;
 
     display: block;
@@ -166,16 +391,18 @@ section.call-to-actions .cta a, section.call-to-actions .cta a .box {
     height: 100%;
 }
 
-section.call-to-actions .cta a:hover {
-    top: -5px;
-
-    -webkit-box-shadow: 0px 16px 22px 0px rgba(90, 91, 95, 0.3);
-    -moz-box-shadow: 0px 16px 22px 0px rgba(90, 91, 95, 0.3);
-    box-shadow: 0px 16px 22px 0px rgba(90, 91, 95, 0.3);
+section.call-to-actions .cta a:hover
+{
+    -webkit-box-shadow: 0 16px 22px 0 rgba(90, 91, 95, .3);
+       -moz-box-shadow: 0 16px 22px 0 rgba(90, 91, 95, .3);
+            box-shadow: 0 16px 22px 0 rgba(90, 91, 95, .3);
 }
 
-section.call-to-actions .cta a .box h4 {
-    position: absolute;
+section.call-to-actions .cta a .box h4
+{
+    font-size: 22px;
+
+    position: relative;
     z-index: 3;
     top: 3rem;
 
@@ -185,36 +412,46 @@ section.call-to-actions .cta a .box h4 {
     text-align: center;
     letter-spacing: 3px;
 
-    color: #5f6369;
-    background: rgba(255, 255, 255, 0.8);
-
-    font-size: 22px;
+    color: $white;
 }
 
-section.call-to-actions .cta a:hover .box h4 {
+section.call-to-actions .cta a:hover .box h4
+{
     letter-spacing: 5px;
 
     background: white;
 }
 
-section.call-to-actions .cta a .box img {
+section.call-to-actions .cta a .box img
+{
     position: relative;
 }
 
-section.call-to-actions .cta a:hover .box img {
- /* IE 9 */
+section.call-to-actions .cta a:hover .box img
+{
     -webkit-transform: scale(1.1);
-    -ms-transform: scale(1.1);
- /* Safari */
-    transform: scale(1.1);
+        -ms-transform: scale(1.1);
+            transform: scale(1.1);
+    /* IE 9 */
+    /* Safari */
 }
 
 /* Reviews */
-section.review {
+
+section.review
+{
     padding: 3rem 0;
 }
 
-section.review blockquote {
+section.review blockquote
+{
+    font-family: 'Open Sans',
+    serif;
+    font-size: 18px;
+    font-weight: normal;
+    font-style: italic;
+    line-height: 2;
+
     margin: 0;
     padding: 0;
 
@@ -222,27 +459,23 @@ section.review blockquote {
 
     color: #7d8589;
     border-left: 0;
-
-    font-family: 'Open Sans', serif;
-    font-size: 18px;
-    font-weight: normal;
-    font-style: italic;
-    line-height: 2;
 }
 
-section.review blockquote span {
+section.review blockquote span
+{
+    font-weight: bold;
+    font-style: normal;
+
     position: relative;
 
     display: block;
 
     margin-top: 1.5rem;
     padding-top: 1.5rem;
-
-    font-weight: bold;
-    font-style: normal;
 }
 
-section.review blockquote span::before {
+section.review blockquote span::before
+{
     position: absolute;
     top: 0;
 
@@ -256,28 +489,41 @@ section.review blockquote span::before {
     background: #333;
 }
 
-section.review .bx-slider, section.review .bx-slider li, section.review .bx-wrapper {
+section.review .bx-slider,
+section.review .bx-slider li,
+section.review .bx-wrapper
+{
     height: auto;
 }
 
-/*** Contact ***/
-section.contact {
+/* Contact ** */
+
+section.contact
+{
     padding: 4rem 0;
 
     background: #fff;
 }
 
-section.contact .f-cols {
+section.contact .f-cols
+{
     padding: 0;
 }
 
-section.contact a.hover-box, section.contact a.hover-box .box-title, section.contact a.hover-box .box-title h4, section.contact a.hover-box .box-title h4::after, section.contact a.hover-box .map-img img, section.contact .contact-info p a {
-    -webkit-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
+section.contact .contact-info p a,
+section.contact a.hover-box,
+section.contact a.hover-box .box-title,
+section.contact a.hover-box .box-title h4,
+section.contact a.hover-box .box-title h4::after,
+section.contact a.hover-box .map-img img
+{
+    -webkit-transition: all .3s ease-in-out;
+         -o-transition: all .3s ease-in-out;
+            transition: all .3s ease-in-out;
 }
 
-section.contact .contact-info {
+section.contact .contact-info
+{
     position: relative;
 
     width: 100%;
@@ -288,33 +534,41 @@ section.contact .contact-info {
     background-size: cover;
 }
 
-section.contact .contact-info h3, section.contact .contact-info p a {
+section.contact .contact-info h3,
+section.contact .contact-info p a
+{
+    font-size: 60px;
+    font-weight: 300;
+
     margin: 0;
     padding: 0;
 
     color: #7d8589;
-
-    font-size: 60px;
-    font-weight: 300;
 }
 
-section.contact .contact-info p a:hover, section.contact .contact-info p a.hovered {
+section.contact .contact-info p a.hovered,
+section.contact .contact-info p a:hover
+{
     color: #000;
 }
 
-section.contact .contact-info p, section.contact .contact-info p a {
-    text-transform: uppercase;
-
-    font-family: $main-font;
+section.contact .contact-info p,
+section.contact .contact-info p a
+{
+    font-family: $font-main;
     font-size: 30px;
     font-weight: 300;
+
+    text-transform: uppercase;
 }
 
-section.contact .location-img {
+section.contact .location-img
+{
     position: relative;
 }
 
-section.contact a.hover-box .box-title {
+section.contact a.hover-box .box-title
+{
     position: absolute;
     z-index: 3;
 
@@ -322,33 +576,44 @@ section.contact a.hover-box .box-title {
     height: 100%;
 
     opacity: 0;
-    background: rgba(51, 51, 51, 0.55);
+    background: rgba(51, 51, 51, .55);
 }
 
-section.contact a.hover-box:hover .box-title, section.contact a.hover-box.hovered .box-title {
+section.contact a.hover-box.hovered .box-title,
+section.contact a.hover-box:hover .box-title
+{
     opacity: 1;
 }
 
-section.contact a.hover-box .map-img {
+section.contact a.hover-box .map-img
+{
     opacity: 1;
-    background: #DDEBBD;
+    background: #ddebbd;
 }
 
-section.contact a.hover-box:hover .map-img img, section.contact a.hover-box.hovered .map-img img {
-    opacity: 0.8;
+section.contact a.hover-box.hovered .map-img img,
+section.contact a.hover-box:hover .map-img img
+{
+    opacity: .8;
 }
 
-section.contact a.hover-box .box-title h4.l-space {
+section.contact a.hover-box .box-title h4.l-space
+{
     letter-spacing: 5px;
 }
 
-section.contact .aligner {
+section.contact .aligner
+{
     position: relative;
 
     height: 100%;
 }
 
-section.contact a.hover-box .box-title h4 {
+section.contact a.hover-box .box-title h4
+{
+    font-family: $font-main;
+    font-size: 36px;
+
     margin: 0;
     padding: 0;
 
@@ -357,13 +622,11 @@ section.contact a.hover-box .box-title h4 {
     text-transform: uppercase;
 
     color: #fff;
-    text-shadow: 0px 0px 5px #000;
-
-    font-family: $main-font;
-    font-size: 36px;
+    text-shadow: 0 0 5px #000;
 }
 
-section.contact a.hover-box .box-title h4::after {
+section.contact a.hover-box .box-title h4::after
+{
     display: block;
 
     width: 0;
@@ -372,89 +635,98 @@ section.contact a.hover-box .box-title h4::after {
 
     content: '';
 
-    background: #DDEBBD;
+    background: #ddebbd;
 }
 
-section.contact a.hover-box:hover .box-title h4::after, section.contact a.hover-box.hovered .box-title h4::after {
+section.contact a.hover-box.hovered .box-title h4::after,
+section.contact a.hover-box:hover .box-title h4::after
+{
     width: 100px;
 }
 
-section.contact img.map {
+section.contact img.map
+{
     width: 100%;
     height: auto;
 }
 
-section.contact .contact-info address {
+section.contact .contact-info address
+{
+    font-family: $font-main;
+    font-size: 18px;
+    line-height: 1.6;
+
     margin-top: 2rem;
 
     color: #7d8589;
-
-    font-family: $main-font;
-    font-size: 18px;
-    line-height: 1.6;
 }
 
-section.contact a.tel {
+section.contact a.tel
+{
     display: block;
 }
 
-section.contact a.tel:hover {
+section.contact a.tel:hover
+{
     text-decoration: underline;
 }
 
-section.contact .highlight a {
+section.contact .highlight a
+{
     font-size: 24px;
     font-weight: 700;
 }
 
-section.contact address a {
-    -webkit-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-
-    color: #555;
-
+section.contact address a
+{
     font-size: 20px;
     font-weight: 600;
+
+    -webkit-transition: all .3s ease-in-out;
+         -o-transition: all .3s ease-in-out;
+            transition: all .3s ease-in-out;
+
+    color: #555;
 }
 
-section.contact address a span {
+section.contact address a span
+{
     font-size: 24px;
     font-weight: 700;
 }
 
-section.contact .highlight a:hover, section.contact address a:hover {
-    color: #0C739E;
+section.contact .highlight a:hover,
+section.contact address a:hover
+{
+    color: #0c739e;
 }
 
-/*** Creds *** --------------------------- */
-section.creds {
+/* Creds *** --------------------------- */
+
+section.creds
+{
     padding: 3rem 0 5rem 0;
 }
 
-section.creds a img {
-    -webkit-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
- /* IE 9 */
-    -webkit-transform: scale(0.9);
-    -ms-transform: scale(0.9);
- /* Safari */
-    transform: scale(0.9);
+section.creds a img
+{
+    -webkit-transition: all .2s ease-in-out;
+         -o-transition: all .2s ease-in-out;
+            transition: all .2s ease-in-out;
+    -webkit-transform: scale(.9);
+        -ms-transform: scale(.9);
+            transform: scale(.9);
 
-    opacity: 0.7;
-
-    -webkit-filter: grayscale(1);
-    filter: grayscale(1);
+    opacity: .7;
+    /* IE 9 */
+    /* Safari */
 }
 
-section.creds a:hover img {
- /* IE 9 */
+section.creds a:hover img
+{
     -webkit-transform: scale(1);
-    -ms-transform: scale(1);
- /* Safari */
-    transform: scale(1);
-
-    -webkit-filter: grayscale(0);
-    filter: grayscale(0);
+        -ms-transform: scale(1);
+            transform: scale(1);
+    /* IE 9 */
+    /* Safari */
 }
