--- a/assets/css/_sections.scss
+++ b/assets/css/_sections.scss
@@ -216,42 +216,52 @@ section.services
 
             & .hover-arrow
             {
-                background: rgba($white, 0.6);
-                opacity: 0;
                 position: absolute;
-                padding:0.25rem;
                 z-index: 3;
-                transition: opacity 0.3s ease;
-                bottom: 5px;
                 right: 0;
-                i {
+                bottom: 5px;
 
+                padding: .25rem;
+
+                transition: opacity .3s ease;
+
+                opacity: 0;
+                background: rgba($white, .6);
+
+                @media screen and (max-width: 991px)
+                {
+                    font-size: 11px;
                 }
-                @media screen and (max-width: 991px) {
-                  font-size: 11px;
-                }
             }
 
-            &::after {
-              content: '';
-              opacity: 0;
-              background: rgba($white, 0.6);
-              display: block;
-              height: 5px;
-              position: absolute;
-              bottom: 0;
-              z-index: 3;
-              width: 100%;
-              transition: opacity 0.3s ease;
+            &::after
+            {
+                position: absolute;
+                z-index: 3;
+                bottom: 0;
+
+                display: block;
+
+                width: 100%;
+                height: 5px;
+
+                content: '';
+                transition: opacity .3s ease;
+
+                opacity: 0;
+                background: rgba($white, .6);
             }
 
-            &:hover::after {
-              content: '';
-              opacity: 1;
+            &:hover::after
+            {
+                content: '';
+
+                opacity: 1;
             }
 
-            &:hover .hover-arrow {
-              opacity: 1;
+            &:hover .hover-arrow
+            {
+                opacity: 1;
             }
 
             & a
@@ -280,8 +290,9 @@ section.services
 
                 color: $white;
 
-                @media screen and (max-width: $md) {
-                  font-size: 18px;
+                @media screen and (max-width: $md)
+                {
+                    font-size: 18px;
                 }
             }
         }
@@ -312,45 +323,61 @@ section.services
 
 section.meet
 {
-    background: $white url(img/logo-watermark.png) no-repeat center center;
     padding: 4rem 0;
 
-    & [class="col-sm-6"] {
-      @media screen and (max-width: $xs) {
-        margin-bottom: 3rem;
-      }
-    }
+    background: $white url(img/logo-watermark.png) no-repeat center center;
 
-    & h4 {
-      font-size: 24px;
-      text-transform: uppercase;
-      color: $theme-main-color;
-      letter-spacing: 1px;
-      font-weight: 300;
-      & span {
-        font-family: $font-tertiary;
-        color: $theme-secondary-color;
-        font-size: 20px;
-        display: block;
-        text-transform: none;
-        margin-top: 1rem;
-      }
-
-      &::after {
-        content: '';
-        display: block;
-        height: 1px;
-        width: 25%;
-        background-color: $theme-accent-color;
-        position: relative;
-        margin: 1rem 0;
-
-        @media screen and (max-width: $md) {
-          margin: 1rem auto;
+    & [class='col-sm-6']
+    {
+        @media screen and (max-width: $xs)
+        {
+            margin-bottom: 3rem;
         }
-      }
     }
 
+    & h4
+    {
+        font-size: 24px;
+        font-weight: 300;
+
+        letter-spacing: 1px;
+        text-transform: uppercase;
+
+        color: $theme-main-color;
+        & span
+        {
+            font-family: $font-tertiary;
+            font-size: 20px;
+
+            display: block;
+
+            margin-top: 1rem;
+
+            text-transform: none;
+
+            color: $theme-secondary-color;
+        }
+
+        &::after
+        {
+            position: relative;
+
+            display: block;
+
+            width: 25%;
+            height: 1px;
+            margin: 1rem 0;
+
+            content: '';
+
+            background-color: $theme-accent-color;
+
+            @media screen and (max-width: $md)
+            {
+                margin: 1rem auto;
+            }
+        }
+    }
 }
 
 /* Call to Actions ** */
@@ -440,38 +467,82 @@ section.call-to-actions .cta a:hover .box img
 
 section.review
 {
-    padding: 3rem 0;
-}
+    padding: 12rem 0;
 
-section.review blockquote
-{
-    font-family: 'Open Sans',
-    serif;
-    font-size: 18px;
-    font-weight: normal;
-    font-style: italic;
-    line-height: 2;
+    background: #fff url(img/bg-review.jpg) no-repeat center center;
 
-    margin: 0;
-    padding: 0;
+    & h4
+    {
+        text-align: center;
 
-    text-align: left;
+        color: $white;
+    }
 
-    color: #7d8589;
-    border-left: 0;
-}
+    & [class*='col']
+    {
+        & .box
+        {
+            padding: 3rem 2rem 1.5rem 2rem;
 
-section.review blockquote span
-{
-    font-weight: bold;
-    font-style: normal;
+            background-color: rgba($theme-main-color, .9);
+        }
 
-    position: relative;
+        &:last-child .box
+        {
+            background-color: rgba(darken($theme-secondary-color, 10%), .9);
+        }
+    }
 
-    display: block;
+    & blockquote
+    {
+        font-family: 'Open Sans', serif;
+        font-size: 18px;
+        font-weight: normal;
+        font-style: italic;
+        line-height: 2;
 
-    margin-top: 1.5rem;
-    padding-top: 1.5rem;
+        margin: 0;
+        padding: 1rem 2rem;
+
+        text-align: center;
+
+        color: $white;
+        border-left: 0;
+    }
+
+    & .author
+    {
+        font-size: 22px;
+        font-weight: 400;
+        font-style: normal;
+
+        position: relative;
+
+        display: block;
+
+        text-align: center;
+
+        color: $white;
+
+        &::before {
+          content: '';
+          height: 1px;
+          margin: 0 auto;;
+          width: 20px;
+          display: block;
+          background-color: $theme-accent-color;
+          margin-bottom: 1rem;
+        }
+
+        & .location
+        {
+            font-family: $font-tertiary;
+            font-size: 18px;
+            font-style: italic;
+
+            display: block;
+        }
+    }
 }
 
 section.review blockquote span::before
