--- a/assets/css/_sections.scss
+++ b/assets/css/_sections.scss
@@ -326,7 +326,18 @@ section.call-to-actions .cta a .box {
       color: $dark-grey;
       font-size: 20px;
       line-height: 1.3;
-      padding: 0.25rem 0.5rem;
+      padding: 0rem 0.5rem;
+    }
+    & .hover-arrow {
+      padding: 0.33rem;
+      background: $theme-accent-color;
+      .fa-stack i:first-child {
+        color: $white;
+      }
+
+      .fa-stack i:last-child {
+        color: $theme-accent-color;
+      }
     }
   }
 }
@@ -339,20 +350,17 @@ section.call-to-actions .cta a:hover {
 
 section.call-to-actions .cta a .box h4 {
   position: absolute;
+  font-weight: 300;
   z-index: 3;
-  top: 3rem;
+  top: 1rem;
+  left: 1rem;
   width: 100%;
   margin: 0;
   padding: 0;
-  text-align: center;
-  letter-spacing: 3px;
-  color: $white;
-  font-size: 22px;
-}
-
-section.call-to-actions .cta a:hover .box h4 {
-  letter-spacing: 5px;
-  background: white;
+  text-align: left;
+  letter-spacing: 0;
+  color: $theme-main-color;
+  font-size: 30px;
 }
 
 section.call-to-actions .cta a .box img {
