--- a/assets/css/_sections.scss
+++ b/assets/css/_sections.scss
@@ -28,47 +28,7 @@
     background: rgba($white, .6);
   }
 
-  & .social-icons {
-    width: 100%;
-    padding: 0.75rem 0;
-    text-align: center;
-    border-right: 1px solid $theme-main-color;
-    border-left: 1px solid $theme-main-color;
-
-    & li {
-      padding-right: 0.35rem;
-
-      &:nth-child(4n+1) a {
-        background: $theme-main-color;
-      }
-
-      &:nth-child(4n+2) a {
-        background: $theme-secondary-color;
-      }
-
-      &:nth-child(4n+3) a {
-        background: $theme-accent-color;
-      }
-
-      &:last-child {
-        padding: 0;
-      }
-
-      a {
-        margin: 0;
-        padding: 8px;
-        background: #1d2a4c;
-        font-size: 12px;
-
-        &:hover {
-          opacity: 0.5;
-        }
-      }
-    }
-    @media screen and (max-width : 767px) {
-      border: 0;
-    }
-  }
+  @include social-icons;
 
   .spec {
     a {
@@ -325,12 +285,19 @@ section.call-to-actions .cta a .box {
       padding: 0;
       color: $dark-grey;
       font-size: 20px;
-      line-height: 1.3;
+      line-height: 1.1;
       padding: 0rem 0.5rem;
+      @media screen and (max-width: $md ) {
+        font-size: 12px;
+      }
     }
     & .hover-arrow {
       padding: 0.33rem;
       background: $theme-accent-color;
+      @media screen and (max-width: $sm ) {
+        flex: 1;
+        text-align: center;
+      }
       .fa-stack i:first-child {
         color: $white;
       }
@@ -338,14 +305,20 @@ section.call-to-actions .cta a .box {
       .fa-stack i:last-child {
         color: $theme-accent-color;
       }
+
+      & .fa-stack {
+        @media screen and (max-width: $md ) {
+          font-size: 10px;
+        }
+      }
     }
   }
 }
 
 section.call-to-actions .cta a:hover {
-  -webkit-box-shadow: 0 16px 22px 0 rgba(90, 91, 95, .3);
-  -moz-box-shadow: 0 16px 22px 0 rgba(90, 91, 95, .3);
-  box-shadow: 0 16px 22px 0 rgba(90, 91, 95, .3);
+  // -webkit-box-shadow: 0 16px 22px 0 rgba(90, 91, 95, .3);
+  // -moz-box-shadow: 0 16px 22px 0 rgba(90, 91, 95, .3);
+  // box-shadow: 0 16px 22px 0 rgba(90, 91, 95, .3);
 }
 
 section.call-to-actions .cta a .box h4 {
@@ -368,6 +341,10 @@ section.call-to-actions .cta a .box img {
 }
 
 section.call-to-actions .cta a:hover .box img {
+  opacity: 0.6;
+}
+
+%transform {
   -webkit-transform: scale(1.1);
   -ms-transform: scale(1.1);
   transform: scale(1.1);
@@ -446,6 +423,10 @@ section.review {
     font-weight: normal;
     font-style: italic;
     line-height: 2;
+    @media screen and (max-width: $sm ) {
+      font-size: 14px;
+      line-height: 1.5;
+    }
   }
 
   & .author {
@@ -492,8 +473,8 @@ section.review .bx-wrapper {
 }
 /* Contact ** */
 section.contact {
+  background: url(img/bg-footer.jpg) no-repeat center center;
   padding: 4rem 0;
-  background: #fff;
 }
 
 section.contact .f-cols {
@@ -511,22 +492,10 @@ section.contact a.hover-box .map-img img {
   transition: all 0.3s ease-in-out;
 }
 
-section.contact .contact-info {
-  position: relative;
-  width: 100%;
-  margin: 0;
-  padding: 20% 1rem;
-  background: #ddebbd url("img/dr-q-big.png") no-repeat center center;
-  background-size: cover;
-}
-
-section.contact .contact-info h3,
-section.contact .contact-info p a {
-  margin: 0;
-  padding: 0;
-  color: #7d8589;
-  font-size: 60px;
-  font-weight: 300;
+section.contact .contact-info h3 {
+  @media screen and (max-width: $lg ) {
+    font-size: 42px;
+  }
 }
 
 section.contact .contact-info p a.hovered,
@@ -540,6 +509,18 @@ section.contact .contact-info p a {
   font-family: $font-primary;
   font-size: 30px;
   font-weight: 300;
+}
+
+section.contact .contact-info {
+  @include social-icons {
+    border: 0;
+
+    & li a:hover {
+      background: $white;
+      color: $theme-main-color;
+      opacity: 1;
+    }
+  }
 }
 
 section.contact .location-img {
@@ -612,10 +593,15 @@ section.contact img.map {
 
 section.contact .contact-info address {
   margin-top: 2rem;
-  color: #7d8589;
+  color: $dark-grey;
   font-family: $font-primary;
-  font-size: 18px;
+  font-size: 24px;
+  font-weight: 400;
   line-height: 1.6;
+
+  @media screen and (max-width: $lg ) {
+   font-size: 18px;
+  }
 }
 
 section.contact a.tel {
